css/src/style.scss
/* ... */
.product-tabs {
  position: relative;
  height: 72px;
  margin-top: -30px; // avoid empty space due to product-name
  margin-bottom: 50px;

  > .product-links {
    width: 100%;
    margin: 0;
    position: absolute;
    left: 50%;
    -ms-transform: translate(-50%, 0%);
    transform: translate(-50%, 0%);

    a {
      height: auto;
    }

    &.color-current a {
      &:not([href="#"]) {
        -webkit-filter: grayscale(98%);
        filter: grayscale(98%);
        opacity: 0.4;
      }
    }
  }

  > .product-name {
    font-size: 18px;
    color: color(black);
    margin-top: 0;
    height: 30px;
  }
}
@media #{$tablet} {
  .product-tabs {
    display: none;
  }
}

// Distributors
.row .distributor {
  font-size: 18px;

  &:nth-child(odd):not(:last-child) {
    padding-top: 25px;
  }
  &:nth-child(even) {
    padding-bottom: 25px;
  }

  h3 {
    padding-bottom: 0;
  }

  .product-links {
    margin-top: 0px;

    [class*="col-"] {
      padding: 0px;
      margin: 0px;
    }

    a {
      width: 24px;
      height: 24px;
      margin: 0px;
      margin-left: 5px;
    }
    .product {
      width: 24px !important;
      height: 24px !important;
      background-size: 24px !important;
    }

    #current {
      height: 1px;
    }
  }

  .logo {
    display: flex;
    align-items: center;
  }
  .country {
    display: flex;
    margin-top: 8px;
    justify-content: flex-start;
    font-weight: 700;
  }

  .type {
    margin-left: 3px;

    @mixin type($name) {
      .#{$name} {
        display: inline-block;
        width: 32px;
        height: 32px;
        margin-left: 4px;
        margin-bottom: -5px;

        background-image: url("../images/distributor-#{$name}.png");
        background-size: cover;

        /* Hide text */
        text-indent: 100%;
        white-space: nowrap;
        overflow: hidden;
      }
    }
    @include type(premium);
    @include type(exclusive);

    #current {
      display: inline-block;
      vertical-align: middle;
      font-size: 14px;
      margin-left: 6px;
      height: 26px;
    }
  }
}

// Cookies (GDPR)
#cookie-notice {
  &.cn-top.bootstrap {
    display: table;
  }

  .cn-button {
    font-size: 14px;
  }

  .cookie-notice-container {
    height: 91px;
    display: table-cell;
    vertical-align: middle;
    font-size: 16px;
  }
}

